# git-of-theseus

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Justfile  README.md  flake.nix  pyproject.toml
.claude/hooks/: session-start.sh
.devcontainer/: devcontainer.json
.github/workflows/: ci-cd.yml
container/: run.sh
crates/got-cli/: Cargo.toml
crates/got-cli/src/: main.rs
crates/got-core/: Cargo.toml
crates/got-core/src/: analyze.rs  cohort.rs  filetypes.rs  filetypes_data.rs  lib.rs  output.rs  path_filter.rs
crates/got-core/tests/: end_to_end.rs
crates/got-plot/: Cargo.toml
crates/got-plot/src/: colors.rs  curve.rs  lib.rs  line.rs  stack.rs  survival.rs
crates/got-plot/tests/: colors.rs  line_plot.rs  stack_plot.rs  survival_plot.rs
git_of_theseus/: __init__.py  analyze.py  git_backend.py  stack_plot.py  survival_plot.py  wasm.py
scripts/: gen_filetypes.py
tests/: test_analyze.py  test_wasm.py
web/: README.md  app.js  index.html
