[workspace]
resolver = "2"
members = [
    "crates/got-core",
    "crates/got-cli",
    "crates/got-plot",
]

[workspace.package]
version = "0.4.0-alpha.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/erikbern/git-of-theseus"
rust-version = "1.74"

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4", features = ["derive"] }
git2 = { version = "0.19", default-features = false, features = ["https"] }
globset = "0.4"
indicatif = "0.17"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
plotters = "0.3"
