[package]
name = "got-cli"
description = "CLI for git-of-theseus (Rust port)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "git-of-theseus-analyze-rs"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
got-core = { path = "../got-core" }
