[package]
name = "got-cli"
description = "CLI for git-of-theseus (Rust port)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "git-of-theseus-analyze-rs"
path = "src/main.rs"

[[bin]]
name = "git-of-theseus-line-plot-rs"
path = "src/bin/line_plot.rs"

[[bin]]
name = "git-of-theseus-stack-plot-rs"
path = "src/bin/stack_plot.rs"

[[bin]]
name = "git-of-theseus-survival-plot-rs"
path = "src/bin/survival_plot.rs"


[dependencies]
anyhow.workspace = true
clap.workspace = true
got-core = { path = "../got-core" }
got-plot = { path = "../got-plot" }
