[package]
name = "got-core"
description = "Core analysis library for git-of-theseus (Rust port)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
git2.workspace = true
globset.workspace = true
indicatif.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile = "3"
