[package]
name = "got-plot"
description = "Plotting for git-of-theseus (Rust port of git_of_theseus.line_plot/stack_plot/survival_plot)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
plotters.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"
